fixing grid shifting

--- a/src/style.css
+++ b/src/style.css
@@ -16,6 +16,7 @@ body {
 .square {
     width: 50px;
     height: 50px;
+    box-sizing: border-box;
 }
 
 .square:nth-child(odd) {
